[gd_scene load_steps=13 format=3 uid="uid://dowqipayg1sbx"]

[ext_resource type="Script" path="res://scripts/Workspace/workspace.gd" id="1_wvxdq"]
[ext_resource type="Texture2D" uid="uid://bog6jv228vyid" path="res://sprites/BGCork.png" id="2_owwm3"]
[ext_resource type="Script" path="res://scripts/NoteList.gd" id="3_hmkl8"]
[ext_resource type="Script" path="res://scripts/Workspace/LinkDrawer.gd" id="4_lxu64"]
[ext_resource type="Script" path="res://scripts/Workspace/Modules/Bookmarks.gd" id="4_ykar6"]
[ext_resource type="Script" path="res://scripts/Workspace/MainCamera.gd" id="5_0kgjp"]
[ext_resource type="PackedScene" uid="uid://pi852642fy8e" path="res://scenes/HUD.tscn" id="6_6cy78"]
[ext_resource type="Script" path="res://scripts/Workspace/ExitConfirmationDialog.gd" id="7_2kai4"]
[ext_resource type="PackedScene" uid="uid://c3i7rai8kuhfr" path="res://scenes/AppSettingsWindow.tscn" id="8_nua0u"]
[ext_resource type="Script" path="res://scripts/ReplaceWindow.gd" id="9_3s0v3"]
[ext_resource type="PackedScene" uid="uid://be3gcb0o8yuwh" path="res://scenes/HelpWindow.tscn" id="10_0s3by"]
[ext_resource type="StyleBox" uid="uid://l8474ad4qmnk" path="res://theme/WindowBackground.tres" id="10_7cpvk"]

[node name="Workspace" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wvxdq")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11227.5
offset_top = -7936.0
offset_right = 11227.5
offset_bottom = 7936.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_owwm3")
stretch_mode = 1

[node name="NoteList" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("3_hmkl8")

[node name="Bookmarks" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ykar6")

[node name="LinkDrawer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_lxu64")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("5_0kgjp")

[node name="HUD" parent="." instance=ExtResource("6_6cy78")]

[node name="ExitConfirmationDialog" type="ConfirmationDialog" parent="."]
disable_3d = true
canvas_item_default_texture_filter = 0
title = "You have unsaved changes!"
initial_position = 2
size = Vector2i(359, 100)
unresizable = true
always_on_top = true
ok_button_text = "Yes, exit without saving"
dialog_text = "Are you sure you want to close Mindograph?"
script = ExtResource("7_2kai4")

[node name="AppSettingsWindow" parent="." instance=ExtResource("8_nua0u")]
visible = false

[node name="ReplaceWindow" type="Window" parent="."]
title = "Replace Note Text"
initial_position = 2
size = Vector2i(358, 232)
visible = false
transient = true
unresizable = true
script = ExtResource("9_3s0v3")

[node name="PanelContainer" type="PanelContainer" parent="ReplaceWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("10_7cpvk")

[node name="ReplacerContainer" type="VBoxContainer" parent="ReplaceWindow/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2
text = "Replace what:"

[node name="What" type="LineEdit" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2
text = "Replace with what:"

[node name="ForWhat" type="LineEdit" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2

[node name="FullWords" type="CheckBox" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2
text = "Replace full word only"

[node name="IgnoreCase" type="CheckBox" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2
text = "Ignore case"

[node name="OkButton" type="Button" parent="ReplaceWindow/PanelContainer/ReplacerContainer"]
layout_mode = 2
text = "REPLACE ALL !"

[node name="HelpWindow" parent="." instance=ExtResource("10_0s3by")]
initial_position = 1
visible = false
popup_window = false

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 300.0

[node name="FPSResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="SaveLoadSystem" type="Node" parent="."]

[connection signal="ProjectLoaded" from="NoteList" to="." method="_on_note_list_project_loaded"]
[connection signal="linkNextTargetChanged" from="NoteList" to="." method="_on_note_list_link_next_target_changed"]
[connection signal="rmbNote" from="NoteList" to="." method="_on_note_list_rmb_note"]
[connection signal="confirmed" from="ExitConfirmationDialog" to="ExitConfirmationDialog" method="_on_confirmed"]
[connection signal="custom_action" from="ExitConfirmationDialog" to="ExitConfirmationDialog" method="_on_custom_action"]
[connection signal="close_requested" from="ReplaceWindow" to="ReplaceWindow" method="_on_close_requested"]
[connection signal="pressed" from="ReplaceWindow/PanelContainer/ReplacerContainer/OkButton" to="ReplaceWindow" method="_on_ok_button_pressed"]
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_autosave_timer_timeout"]
[connection signal="timeout" from="FPSResetTimer" to="." method="_on_fps_reset_timer_timeout"]
